<resources>
    <string name="app_name">willy_start</string>
    <string name="welcometo_willy">Willy</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="create_account">Create account</string>
    <string name="name">Name</string>
    <string name="hello">Hello</string>
    <string name="todo">TODO</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
</resources>
